add actualizar profesor en director

--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
@@ -75,7 +75,7 @@ $( "#profesores	 h3" ).css("opacity","0.4");
 							<td>
 								<table class="opciones" style="right:129px">
 									<td>
-									<a href="{{ path('ingenieria_director_profesor' , { 'ci': profesor.ci}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
+									<a href="{{ path('ingenieria_director_profesor' , { 'id': profesor.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
 									</td>
 									<td style="width: 110px;">
 									<a href="{{ path('ingenieria_director_actividadesprofesor' , { 'id': profesor.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Actividades </h3></a>
