--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/profesor.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/profesor.html.twig
@@ -5,12 +5,6 @@ Aplicación WEB - [Director]
 {% endblock %}
 
 {% block js  %}
-<script>
-$( "#profesores" ).css("background-color","#000");
-$( "#profesores img" ).css("opacity","0.4");
-$( "#profesores h3" ).css("opacity","0.4");
-</script>
-
 {% endblock %}
 
 {% block content  %}
@@ -27,7 +21,7 @@ $( "#profesores h3" ).css("opacity","0.4");
 	<div class="downSection">
 		<div class="profileContainer">
 			<div class="profileFormContainer">
-				<form action="{{ path('ingenieria_director_profesor'  , { 'ci': profesor.ci }) }}" method="post" {{ form_enctype(formulario) }}>
+				<form action="{{ path('ingenieria_director_profesor'  , { 'id': profesor.id }) }}" method="post" {{ form_enctype(formulario) }}>
 					
 					{{ form_errors(formulario) }}
 
