--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
@@ -5,12 +5,6 @@ Aplicación WEB : [Estudiante]
 {% endblock %}
 
 {% block js  %}
-<script>
-$( "#actividades" ).css("background-color","#000");
-$( "#actividades img" ).css("opacity","0.4");
-$( "#actividades h3" ).css("opacity","0.4");
-</script>
-
 {% endblock %}
 
 {% block content  %}
@@ -55,18 +49,22 @@ $( "#actividades h3" ).css("opacity","0.4");
 				<div class="inputContainer">	
 					<h2>Profesor</h2>
 					<div class="input nomodificable">
-					<input type="text" value = "{{ actividad.profesor.getNombreCompleto }}" readonly>
+					<input type="text" value	 = "{{ actividad.profesor.getNombreCompleto }}" readonly>
 					</div>
 				</div>
-
+				<!--
 				<div class="inputContainer">	
 					<h2>Recurso digital</h2>
 					<div class="input nomodificable">
 					<a href = "http://{{ actividad.url }}" target="_blank">{{ actividad.url }}</a>
 					</div>
 				</div>
+				-->
+				<div class= "inputContainer" style = "position= absolute;">
+					<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><h4>Cursar actividad</h4></a>
+				</div>
 			</form>
-			<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><h4>Cursar actividad</h4></a>
+			
 			</div><!--profileFormContainer -->	
 		</div><!--profileContainer -->	
 	</div><!--donwsection -->
