fix confirmacion estudiante

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
@@ -27,8 +27,8 @@ $( "#cronograma h3" ).css("opacity","0.4");
 		<div class = "downSection">
 			
 			<h2 style = "color: black">
-				Su inscripción ha sido formalizada en el sistema! 
-				<a href="{{ path('ingenieria_estudiante_actividades') }}"  class = "button"><h4>ofertas disponibles!</h4></a>
+				Su inscripción ha sido formalizada en el sistema, debe registrar el cronograma de actividad! 
+				<a href="{{ path('ingenieria_estudiante_cronograma') }}"  class = "button"><h4>ofertas disponibles!</h4></a>
 			</h2>
 		</div><!-- downSection -->
 		{% endblock %}
