--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
@@ -38,9 +38,9 @@ $( "#actividades h3" ).css("opacity","0.4");
 						<th style=" width:15%"></th> 
 						<th style=" width:12%"></th> 
 						<th></th> 
-						<th style=" width:10%"><img src="{{ asset('img/idLabel.png') }}"/></th> 
+						<th style=" width:10%"><!--<img src="{{ asset('img/idLabel.png') }}"/>--></th> 
 						<th style=" width:25%"></th> 
-						<th><img src="{{ asset('img/mailLabel.png') }}"/></th>
+						<th><!--<img src="{{ asset('img/mailLabel.png') }}"/>--></th>
 						
 						<th></th>
 						<th></th>
