--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
@@ -64,7 +64,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 											<div>
 												<table class="opciones">
 													{% if estudiante.actividades.count > 0 %}
-													<td><a href="{{ path('usuario_cronograma', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Cronograma</h3></a></td>
+													<td style="width: 120px;"><a href="{{ path('usuario_cronograma', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Cronograma</h3></a></td>
 													{% else %}
 													<td><img src="{{ asset('img/nocrono.png') }}" /></td>
 													{% endif %}
