--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/matricula.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/matricula.html.twig
@@ -52,7 +52,7 @@
 											<div>
 												<table class="opciones">
 													{% if estudiante.actividades.count > 0 %}
-													<td><a href="{{ path('usuario_cronograma', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Cronograma</h3></a></td>
+													<td style="width: 120px;"><a href="{{ path('usuario_cronograma', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Cronograma</h3></a></td>
 													{% else %}
 													<td	><img src="{{ asset('img/nocrono.png') }}" /></td>
 													{% endif %}
