--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes.html.twig
@@ -70,7 +70,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 							<td style=" width:25%"></td>
 							<td>
 								<table class="opciones" style="right:129px">
-									<td><a href="{{ path('ingenieria_profesor_cronograma' , { 'ci': estudiante.ci}) }}"><img src="{{ asset('img/ver.png') }}" ><h3> Ver </h3></a>
+									<td style="width: 120px;"><a href="{{ path('ingenieria_profesor_cronograma' , { 'id': estudiante.id}) }}"><img src="{{ asset('img/ver.png') }}" ><h3> Cronograma </h3></a>
 									</td>
 								</table>
 							</td>
