--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
@@ -25,24 +25,28 @@ $( "#cronograma h3" ).css("opacity","0.4");
 		<div class = "upSection" style="height:60px;">
 			<h1 class ="sectionTitle">Mi cronograma</h1>
 
+			{% if estudiante.aprobadoCronograma == false %}
+				<div id="aggacti" style="width: 700px;height: 40px; float: right; padding: 5px;" data-path = "{{ path('ingenieria_estudiante_agregaractividad') }}">
+					<form style="width:100%; top:21px; opacity:1;">
+					<div style="position:relative; float:right;">
+						<input style="padding-left:38px;"  class="button" value="listo" id="btnsubir" name="listo"  type="button">
+							<img style="pointer-events:none; position:absolute; top:0; left:13px;" src="/complementaria/web/img/listo.png"/>
+							</input>
+					</div>
 
-			<div id="aggacti" style="width: 700px;height: 40px; float: right; padding: 5px;" data-path = "{{ path('ingenieria_estudiante_agregaractividad') }}">
-				<form style="width:100%; top:21px; opacity:1;">
-				<div style="position:relative; float:right;">
-					<input style="padding-left:38px;"  class="button" value="listo" id="btnsubir" name="listo"  type="button">
-						<img style="pointer-events:none; position:absolute; top:0; left:13px;" src="/complementaria/web/img/listo.png"/>
-						</input>
-				</div>
+					<input style=" float:right" type="text" name="fecha" id="cronograma_fechaIniciacion">
+					<h2 style="margin-top:8px; margin-right: 15px; color:#000; float:right">Fecha de entrega:</h2> 
 
-				<input style=" float:right" type="text" name="fecha" id="cronograma_fechaIniciacion">
-				<h2 style="margin-top:8px; margin-right: 15px; color:#000; float:right">Fecha de entrega:</h2> 
-
-				<input style="margin-right:10px; float:right" type="text" name="actividad" id="input_actividad">
-				<h2 style=" margin-top:8px; margin-right: 15px; color:#000; float:right">Actividad:</h2> 
+					<input style="margin-right:10px; float:right" type="text" name="actividad" id="input_actividad">
+					<h2 style=" margin-top:8px; margin-right: 15px; color:#000; float:right">Actividad:</h2> 
 				
-			</form>
-
-			</div>
+					</form>
+				</div>
+			{% else %}
+				<div style="width: 250px;height: 40px; float: right; padding: 1px;font-size: 24px;">
+					Status aprobado				
+				</div>
+			{% endif %}
 		</div>
 		{% endblock  %}
 
