--- a/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
@@ -18,6 +18,10 @@
 				<img id="externoIcon" src="{{ asset('img/cronograma.png') }}">
 				<h3>Cronograma</h3>
 			</a>
+		<a href="{{ path('ingenieria_estudiante_actividadmatriculada') }}" class="menubutton"  id="actividad">
+				<img id="externoIcon" src="{{ asset('img/cronograma.png') }}">
+				<h3>Actividad</h3>
+			</a>
 		</div>
 {% endblock  %}
 
