fix titulo en twig confirmacion

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
@@ -28,7 +28,7 @@ $( "#cronograma h3" ).css("opacity","0.4");
 			
 			<h2 style = "color: black">
 				Su inscripción ha sido formalizada en el sistema, debe registrar el cronograma de actividad! 
-				<a href="{{ path('ingenieria_estudiante_cronograma') }}"  class = "button"><h4>ofertas disponibles!</h4></a>
+				<a href="{{ path('ingenieria_estudiante_cronograma') }}"  class = "button"><h4>Registrar cronograma</h4></a>
 			</h2>
 		</div><!-- downSection -->
 		{% endblock %}
