fix title programa twig

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
@@ -1,7 +1,7 @@
 {% extends 'IngenieriaEstudianteBundle::layout.html.twig' %}
 
 {% block programa %}
-Aplicación WEB - [Profesor]
+Aplicación WEB  [Profesor]
 {% endblock %}
 
 {% block js  %}
