--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/directores.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/directores.html.twig
@@ -1,12 +1,15 @@
 {% extends 'IngenieriaUsuarioBundle::layout.html.twig' %}
 
+{% block programa %}
+Aplicación WEB - [Administrador]
+{% endblock %}
+
 {% block js  %}
 <script>
 $( "#directores" ).css("background-color","#000");
 $( "#directores img" ).css("opacity","0.4");
 $( "#directores h3" ).css("opacity","0.4");
 </script>
-
 {% endblock %}
 
 {% block content  %}
