--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
@@ -1,7 +1,7 @@
 {% extends 'IngenieriaEstudianteBundle::layout.html.twig' %}
 
 {% block programa %}
-Aplicación WEB : [Estudiante]
+Aplicación WEB  [Estudiante]
 {% endblock %}
 
 {% block js  %}
