--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
@@ -34,10 +34,10 @@ $( "#cronograma h3" ).css("opacity","0.4");
 							</input>
 					</div>
 
-					<input style=" float:right" type="text" name="fecha" id="cronograma_fechaIniciacion">
+					<input style="width:120px; float:right" type="text" name="fecha" id="cronograma_fechaIniciacion">
 					<h2 style="margin-top:8px; margin-right: 15px; color:#000; float:right">Fecha de entrega:</h2> 
 
-					<input style="margin-right:10px; float:right" type="text" name="actividad" id="input_actividad">
+					<input style="width: 350px; margin-right:10px; float:right" type="text" name="actividad" id="input_actividad">
 					<h2 style=" margin-top:8px; margin-right: 15px; color:#000; float:right">Actividad:</h2> 
 				
 					</form>
