fix look and feel in teacher

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
@@ -47,11 +47,9 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 				<tbody>
 					<tr class="tableHead">
 						<th style=" width:15%"></th> 
-						<th style=" width:12%"></th> 
-						<th></th> 
-						<th style=" width:10%"><img src="{{ asset('img/idLabel.png') }}"/></th> 
-						<th style=" width:25%"></th> 
-						<th><img src="{{ asset('img/mailLabel.png') }}"/></th>
+						<th style=" width:10%"><h2>Actividad</h2></th> 
+						<th style=" width:40%"></th> 
+						<th><h2>Fecha de entrega</h2></th>
 						<th></th>
 						<th></th>
 					</tr> <!--tablehead -->
