--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
@@ -30,7 +30,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 		<div class = "upSection">  
 				<h1 class ="sectionTitle">Cronograma del estudiante</h1>
 				<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
-				{% if estudiante.aprobadoCronograma == false %}
+				{% if (estudiante.aprobadoCronograma == false) and (msgerr.id == '1')%}
 				<a href="{{ path('ingenieria_profesor_aprobarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/listo.png') }}"/><h4>Aprobar</h4></a>
 				{% endif %}
 		</div>
@@ -39,7 +39,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 		{% block downSection  %}
 		
 		<div class = "downSection"> 
-		{% if msgerr.id == '0' %}
+		{% if msgerr.id == '1' %}
 			<div id = "error">¡El estudiante no ha subido el cronograma de actividades!</div>		
 			<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Enviar email</h4></a>
 		{% else %}
