add ver categorias

--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -26,10 +26,15 @@
 				<h3>Profesores</h3>
 			</a>
 			<a href="{{ path('usuario_actividades') }}" class="menubutton"  id="actividades">
-				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+				<img id="externoIcon" src="{{ asset('img/centroIcon.png') }}">
 				<h3>Actividades</h3>
 			</a>
+			<a href="{{ path('usuario_categorias') }}" class="menubutton"  id="categorias">
+				<img id="externoIcon" src="{{ asset('img/cronograma.png') }}">
+				<h3>Categorías</h3>
+			</a>
 
+			
 		</div>
 {% endblock  %}
 
