add registrar categoria

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrardirector.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrardirector.html.twig
@@ -1,7 +1,7 @@
 {% extends 'IngenieriaUsuarioBundle::layout.html.twig' %}
 
 {% block programa %}
-Programa
+App WEB [Administrador]
 {% endblock %}
 
 {% block js  %}
