add actualizar categoria

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/categorias.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/categorias.html.twig
@@ -61,7 +61,7 @@ $( "#categorias h3" ).css("opacity","0.4");
 							<td>
 								<table class="opciones" style="right:129px">
 									<td style="width: 100px;">
-									<a href="{{ path('usuario_matricula' , { 'id': categoria.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
+									<a href="{{ path('usuario_actualizar_categoria' , { 'id': categoria.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
 									</td>
 								</table>
 								
