--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/profesores.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/profesores.html.twig
@@ -18,7 +18,7 @@ $( "#profesores h3" ).css("opacity","0.4");
 		{% block upSection  %}
 		<div class = "upSection">
 			<h1 class ="sectionTitle">Profesores</h1>
-			
+			<a href="{{ path('usuario_registrar_profesor') }}" class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Nuevo profesor</h4></a>
 		</div>
 		{% endblock  %}
 
