--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
@@ -34,7 +34,7 @@ Aplicación WEB  [Estudiante]
 				<div class="inputContainer">	
 					<h2>Categoría</h2>
 					<div class="input nomodificable">
-					<input type="text" value = "{{ actividad.categoria }}" readonly>
+					<input type="text" value = "{{ actividad.categoria.nombre }}" readonly>
 					</div>
 				</div>
 
