--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
@@ -37,7 +37,7 @@ $( "#actividad h3" ).css("opacity","0.4");
 				<div class="inputContainer">	
 					<h2>Categoría</h2>
 					<div class="input nomodificable">
-					<input type="text" value = "{{ actividad.categoria }}" readonly>
+					<input type="text" value = "{{ actividad.categoria.nombre }}" readonly>
 					</div>
 				</div>
 
