--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/registraractividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/registraractividades.html.twig
@@ -21,7 +21,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 		<div class="upSection">
 			<h1 class="sectionTitle">Nueva actividad</h1>
 
-			<a href="{{ path('ingenieria_profesor_homepage') }}" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
+			<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 			
 		</div><!-- upSection -->
 		{% endblock  %}
