--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrarcategoria.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrarcategoria.html.twig
@@ -13,7 +13,7 @@ App WEB [Administrador]
 		{% block upSection  %}
 		<div class = "upSection">
 			<h1 class ="sectionTitle">Nueva categoría</h1>
-			<a href="{{ path('usuario_adm_homepage') }}" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
+			<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 		</div>
 		{% endblock  %}
 
