fix ver actividad estudiante url

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/matricula.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/matricula.html.twig
@@ -13,7 +13,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 <div class="content">
 		{% block upSection  %}
 			<div class = "upSection">
-			<h1 class ="sectionTitle">Matricula</h2>
+			<h1 class ="sectionTitle">Matrícula</h2>
 			</div> <!--up section -->
 		{% endblock  %}
 
