fix barra actividades ofertadas en estudiante

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
@@ -26,12 +26,8 @@ Aplicación WEB  [Profesor]
 			<table class = "generalTableHead">
 				<tbody>
 					<tr class="tableHead">
-						<th style=" width:15%"></th> 
-						<th style=" width:12%"></th> 
-						<th></th> 
-						<th style=" width:10%"><img src="{{ asset('img/idLabel.png') }}"/></th> 
-						<th style=" width:25%"></th> 
-						<th><img src="{{ asset('img/mailLabel.png') }}"/></th>
+						<th style=" width:75%"></th> 
+						<th><h2>PROFESOR</h2></th>
 						<th></th>
 						<th></th>
 					</tr> <!--tablehead -->
