--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
@@ -5,6 +5,11 @@ Aplicación WEB : [Estudiante]
 {% endblock %}
 
 {% block js  %}
+<script>
+$( "#actividad" ).css("background-color","#000");
+$( "#actividad img" ).css("opacity","0.4");
+$( "#actividad h3" ).css("opacity","0.4");
+</script>
 {% endblock %}
 
 {% block content  %}
