--- a/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/layout.html.twig
@@ -19,7 +19,7 @@
 				<h3>Estudiantes</h3>
 			</a>
 			<a href="{{ path('ingenieria_profesor_actividades') }}" class="menubutton"  id="actividades">
-				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+				<img id="externoIcon" src="{{ asset('img/actividad.png') }}">
 				<h3>Actividades</h3>
 			</a>
 
