--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -6,7 +6,6 @@
 {{ parent() }}	
 {% endblock %}
 
-
 {% block body %}
 {{ parent() }}
 {% endblock %}
@@ -26,15 +25,13 @@
 				<h3>Profesores</h3>
 			</a>
 			<a href="{{ path('usuario_actividades') }}" class="menubutton"  id="actividades">
-				<img id="externoIcon" src="{{ asset('img/centroIcon.png') }}">
+				<img id="externoIcon" src="{{ asset('img/actividad.png') }}">
 				<h3>Actividades</h3>
 			</a>
 			<a href="{{ path('usuario_categorias') }}" class="menubutton"  id="categorias">
 				<img id="externoIcon" src="{{ asset('img/cronograma.png') }}">
 				<h3>Categorías</h3>
 			</a>
-
-			
 		</div>
 {% endblock  %}
 
